--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     margin-top: 25px;
 }
 
-.menuBoxs {
+#menuBoxs {
     margin-top: 50px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -35,4 +35,5 @@
 
 .card:hover {
     cursor: pointer;
+    border: 2px solid rgb(255, 104, 104);
 }
